unpackaged/main/default/objects/blng__CreditNoteLine__c/fields/blng__Allocations__c.field-meta.xml
<CustomField>
    <fullName>blng__Allocations__c</fullName>
    <inlineHelpText>Montant de cette ligne allouée aux factures. N’inclut pas les taxes.</inlineHelpText>
    <label>Allocations</label>
    <summarizedField>blng__CreditNoteAllocation__c.blng__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>blng__CreditNoteAllocation__c.blng__Type__c</field>
        <operation>equals</operation>
        <value>Allocation</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__CreditNoteAllocation__c.blng__CreditNoteLine__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>