unpackaged/main/default/objects/blng__CreditNoteLine__c/fields/blng__Refunds__c.field-meta.xml
<CustomField>
    <fullName>blng__Refunds__c</fullName>
    <formula>blng__RefundsAllocations__c - blng__RefundsUnallocations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Montant qui a été alloué de cette ligne</inlineHelpText>
    <label>Refunds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>