unpackaged/main/default/objects/blng__CreditNoteLine__c/fields/blng__RefundsAllocations__c.field-meta.xml
<CustomField>
    <fullName>blng__RefundsAllocations__c</fullName>
    <inlineHelpText>Montant de cette ligne alloué aux remboursements</inlineHelpText>
    <label>Refunds (Allocations)</label>
    <summarizedField>blng__RefundLineCreditNoteLine__c.blng__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>blng__RefundLineCreditNoteLine__c.blng__Type__c</field>
        <operation>equals</operation>
        <value>Allocation</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__RefundLineCreditNoteLine__c.blng__CreditNoteLine__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>