unpackaged/main/default/objects/blng__CreditNoteLine__c/fields/blng__StartDate__c.field-meta.xml
<CustomField>
    <fullName>blng__StartDate__c</fullName>
    <inlineHelpText>Date de début de la durée de la ligne de crédit</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>