unpackaged/main/default/objects/blng__CreditNoteLine__c/fields/blng__Subtotal__c.field-meta.xml
<CustomField>
    <fullName>blng__Subtotal__c</fullName>
    <inlineHelpText>Montant non remboursé de la note de crédit. Ne comprend pas les taxes. Égal au montant - montant du remboursement</inlineHelpText>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>