unpackaged/main/default/objects/blng__CreditNoteLine__c/fields/blng__TaxCity__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxCity__c</fullName>
    <inlineHelpText>À utiliser dans les calculs des taxes. Ville de destination pour ce produit.</inlineHelpText>
    <label>Tax City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>