unpackaged/main/default/objects/blng__CreditNoteLine__c/fields/blng__TaxCountry__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxCountry__c</fullName>
    <inlineHelpText>À utiliser dans les calculs de taxes. Ville de destination pour ce produit.</inlineHelpText>
    <label>Tax Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>