unpackaged/main/default/objects/blng__CreditNoteLine__c/fields/blng__TaxEngine__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxEngine__c</fullName>
    <inlineHelpText>Moteur fiscal utilisé pour calculer les taxes</inlineHelpText>
    <label>Tax Engine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__TaxEngine</valueSetName>
    </valueSet>
</CustomField>