unpackaged/main/default/objects/blng__CreditNoteLine__c/fields/blng__TaxStatus__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxStatus__c</fullName>
    <inlineHelpText>Statut du calcul de taxe, qui peut être : En attente, En cours, Terminé, Annulé, Erreur</inlineHelpText>
    <label>Tax Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__LineTaxStatus</valueSetName>
    </valueSet>
</CustomField>