unpackaged/main/default/objects/blng__CreditNoteLine__c/fields/blng__TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__TotalAmount__c</fullName>
    <inlineHelpText>Le montant total doit être le même que le montant de la ligne de facture</inlineHelpText>
    <label>Total Amount (With Tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>